# padvinder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: AppBase.h  BufferTools.h  Camera.h  GraphicsPipeline.h  GraphicsPipelineConfig.h  ImageTools.h  RTX.h  RTXConfig.h  RenderPass.h  Scene.h  Vertex.h  VkDefaults.h  WindowApp.h  precomp.h
shaders/: brdf.glsl  common.glsl  hit.rchit  miss.rmiss  raygen.rgen  triangle.frag  triangle.vert
shaders_bin/: hit.rchit.spv  miss.rmiss.spv  raygen.rgen.spv  triangle.frag.spv  triangle.vert.spv
src/: AppBase.cpp  BufferTools.cpp  Camera.cpp  GraphicsPipeline.cpp  GraphicsPipelineConfig.cpp  RTX.cpp  RenderPass.cpp  Scene.cpp  WindowApp.cpp  main.cpp  precomp.cpp
